[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privhat"
version = "0.1.0"
description = "Cryptography CLI Tool"
authors = [
  { name="ayiman29" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["crypto", "CLI", "encryption", "signing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
privhat = "privhat:main"

[project.dependencies]
colorama = "*"